<resources>
    <string name="app_name">A3csci3130</string>
    <string name="title_activity_list">ListActivity</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="create_business">Create Business</string>
    <string name="name">Name</string>
    <string name="string_name" />
    <string name="address">Address</string>
    <string name="business_number">Business Number</string>
    <string name="prime_business">Prime Business</string>
    <string name="province">Province</string>
</resources>
